<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NitroShare</string>

    <!-- Transfer activity -->
    <string name="activity_transfer_empty_text">No transfers in progress</string>
    <string name="activity_transfer_navigation_drawer_open">Open navigation drawer</string>
    <string name="activity_transfer_navigation_drawer_close">Close navigation drawer</string>

    <!-- Transfer menu -->
    <string name="menu_transfer_title">NitroShare</string>
    <string name="menu_transfer_subtitle">Device: %1$s</string>
    <string name="menu_transfer_item_send">Send Items</string>
    <string name="menu_transfer_item_settings">Settings</string>
    <string name="menu_transfer_item_intro">Intro</string>
    <string name="menu_transfer_item_report">Report a Bug</string>
    <string name="menu_transfer_item_about">About</string>
    <string name="menu_transfer_item_exit">Exit</string>

    <!-- Intro activity -->
    <string name="activity_intro_intro_title">Introduction</string>
    <string name="activity_intro_intro_description">NitroShare makes it easy to send files to other devices on your local network.</string>
    <string name="activity_intro_share_title">Sending Files</string>
    <string name="activity_intro_share_description">Send files with NitroShare from other Android applications like Gallery, Google Docs, and Google Photos.</string>
    <string name="activity_intro_desktop_title">Desktop App</string>
    <string name="activity_intro_desktop_description">NitroShare for Android works with the desktop app, which is available for Windows, macOS, and Linux.</string>
    <string name="activity_intro_desktop_button">Visit Website</string>
    <string name="activity_intro_perms_title">Permission</string>
    <string name="activity_intro_perms_description">In order to send and receive files, NitroShare needs your permission to read and write files on your Android device.</string>

    <!-- Explorer activity -->
    <string name="activity_explorer">Send Items</string>
    <string name="activity_explorer_internal">Internal Storage</string>
    <string name="activity_explorer_removable">Removable Storage (%1$s)</string>
    <string name="activity_explorer_hint">Long press to send multiple items</string>
    <string name="activity_explorer_error">Unable to open directory:\n%1$s</string>
    <string name="activity_explorer_kb">%1$d KB</string>
    <string name="activity_explorer_mb">%1$d MB</string>
    <string name="activity_explorer_gb">%1$d GB</string>

    <string name="menu_explorer_actions_send">Send</string>
    <string name="menu_explorer_options_show_hidden">Show Hidden Items</string>

    <!-- Share activity -->
    <string name="activity_share">Send with NitroShare</string>
    <string name="activity_share_label">Select a device from the list below to receive the transfer:</string>
    <string name="activity_share_intent">NitroShare cannot send the data it has received from a third-party application.</string>
    <string name="activity_share_permissions">NitroShare cannot transfer data without permission to access storage.</string>

    <!-- Settings activity -->
    <string name="activity_settings">Settings</string>
    <string name="activity_settings_category_general">General</string>
    <string name="activity_settings_category_appearance">Appearance</string>
    <string name="activity_settings_pref_device_name">Device Name</string>
    <string name="activity_settings_pref_transfer_directory">Transfer Directory</string>
    <string name="activity_settings_pref_behavior_receive">Receive Transfers</string>
    <string name="activity_settings_pref_behavior_receive_summary">Accept incoming transfers from other devices</string>
    <string name="activity_settings_pref_behavior_overwrite">Overwrite</string>
    <string name="activity_settings_pref_behavior_overwrite_summary">Replace existing files with the same name</string>
    <string name="activity_settings_pref_behavior_autostart">Auto start</string>
    <string name="activity_settings_pref_behavior_autostart_summary">Auto start when device starts</string>
    <string name="activity_settings_category_notifications">Notifications</string>
    <string name="activity_settings_pref_notification_sound">Notification Sound</string>
    <string name="activity_settings_pref_notification_sound_summary">Play sound when a transfer completes</string>
    <string name="activity_settings_darkTheme" translatable="false">Dark theme</string>
    <string name="activity_settings_darkTheme_summary" translatable="false">Enable the alternate dark theme instead of the standard light theme</string>

    <!-- Directory fragment -->
    <string name="dialog_directory_message">Tap on a directory name to open it. Long press to select.</string>
    <string name="dialog_directory_select">Select</string>

    <!-- About activity -->
    <string name="activity_about">About</string>
    <string name="activity_about_subtitle">Cross-platform file transfer application</string>
    <string name="activity_about_version">Version:</string>
    <string name="activity_about_last_updated">Last Updated:</string>
    <string name="activity_about_license" tools:ignore="TypographyOther">
        <![CDATA[The MIT License (MIT)\n\nCopyright (c) 2018 Nathan Osman\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.]]>
    </string>

    <!-- Transfer service -->
    <string name="service_transfer_title">NitroShare Transfer</string>
    <string name="service_transfer_action_stop">Stop</string>
    <string name="service_transfer_action_retry">Retry</string>
    <string name="service_transfer_server_title">NitroShare Service</string>
    <string name="service_transfer_server_listening_text">Listening for incoming transfers</string>
    <string name="service_transfer_status_connecting">Connecting to %1$s…</string>
    <string name="service_transfer_status_receiving">Receiving items from %1$s…</string>
    <string name="service_transfer_status_sending">Sending items to %1$s…</string>
    <string name="service_transfer_status_success">Transfer with %1$s completed</string>
    <string name="service_transfer_status_error">Transfer with %1$s failed: %2$s</string>
    <string name="service_transfer_unknown_device">[unknown]</string>
    <string name="service_transfer_notification_url">URL</string>

    <!-- Transfer notification manager -->
    <string name="channel_service_name">Transfer Service</string>
    <string name="channel_transfer_name">Ongoing Transfers</string>
    <string name="channel_notification_name">Transfer Completion</string>

    <!-- Transfer adapter -->
    <string name="adapter_transfer_connecting">Connecting…</string>
    <string name="adapter_transfer_transferring">Transferring: %1$d%%</string>
    <string name="adapter_transfer_failed">Failed: %1$s</string>
    <string name="adapter_transfer_succeeded">Succeeded</string>
    <string name="adapter_transfer_unknown">unknown</string>
    <string name="adapter_transfer_bytes">%1$s / %2$s</string>
    <string name="adapter_transfer_stop">Stop</string>
    <string name="adapter_transfer_retry">Retry</string>

</resources>
