<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/grp1" android:checkableBehavior="none">

        <item
            android:id="@+id/action_send"
            android:title="@string/menu_transfer_item_send" />

    </group>

    <group android:id="@+id/grp2" android:checkableBehavior="none">

        <item
            android:id="@+id/action_settings"
            android:title="@string/menu_transfer_item_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_intro"
            android:title="@string/menu_transfer_item_intro"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/grp3" android:checkableBehavior="none">

        <item
            android:id="@+id/action_report"
            android:title="@string/menu_transfer_item_report"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_about"
            android:title="@string/menu_transfer_item_about"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/grp4" android:checkableBehavior="none">

        <item
            android:id="@+id/action_exit"
            android:title="@string/menu_transfer_item_exit"
            app:showAsAction="never" />

    </group>

</menu>